testing/Travis/testcases/Parsing/shouldFail/Issue1189.adl
CONTEXT Issue1189

RELATION r[Amper * Zand] DEFAULT TGT EVALPHP "Open Universiteit" SRC VALUE 10, "NL"
-- This should fail, because 10 should match the TType of Amper, which defaults to ALPHANUMERIC.

ENDCONTEXT